<resources>
    <string name="app_name">Turismo Sopetrán</string>

    <string name="mapa">Ubicación</string>

    <string name="hello_world">Hello world!</string>
    <string name="Hotel">Hoteles</string>
    <string name="Inicio">Inicio</string>
     <string name="Sitios">Sitios de interés</string>
    <string name="Bares">Bares</string>
    <string name="Demo">Demografía</string>
    <string name="Presentacion">Presentación</string>
    <string name="tPresentacion">Sopetrán forma parte de la trilogía de la Ruta del Sol del occidente de Antioquia. Tras la inauguración del Túnel de Occidente Fernando Gómez Martínez, sus posibilidades turísticas se han triplicado a partir del año 2006. Es una tierra apta para el ecoturismo.</string>
    <string name="title_activity_activity_hotel">Hoteles</string>
    <string name="title_activity_activity_sitios">Sitios de interés</string>
    <string name="action_settings">Settings</string>
    <string name="titCable">GUATOCABLE</string>
    <string name="tCable">El recorrido que hace el vagón del cable aéreo es de 760 metros a una altura de 340 metros y el tiempo de recorrido es de 7 minutos aproximadamente.</string>
    <string name="tSannico">Conocido como el “macondo antioqueño”, por su hermosa arquitectura de construcciones típicas de la ambiente paisa de antaño.</string>
    <string name="titSannico">CORREGIMIENTO DE SAN NICOLÁS</string>
    <string name="tNevera">Ubicado en la parte oriental del parque principal del Municipio, este sendero nos lleva hasta las heladas aguas de la nevera</string>
    <string name="titNevera">SENDERO ECOLÓGICO LA NEVERA</string>
    <string name="title_activity_activity_demografia">Demografia</string>
    <string name="tdemo1">Población Total: 13.943 hab.</string>
    <string name="tdemo2">Población Urbana: 6.411</string>
    <string name="tdemo3">Población Rural: 7.531</string>
    <string name="tdemo4">Alfabetismo: 88,7%</string>
    <string name="tdemo5">Zona urbana: 92,3%</string>
    <string name="tdemo6">Zona rural: 85,7%</string>
    <string name="thotelb">Instalaciones en el medio del campo, rodeadas de naturaleza con toda la belleza y tranquilidad que usted necesita</string>
    <string name="thotelt">Nuestro compromiso es con la excelencia en nustros servicios. Deseamos hacer de tu experiencia turística, una verdadera vivencia placentera y un grato recuerdo</string>
    <string name="thotelv">Es un hotel moderno y campestre, el cual te ofrece una presencia íntima, inspiradora que corre por cuenta del buen diseño y la privacidad</string>
    <string name="title_activity_activity_bar">Bares</string>
    <string name="title_activity_activity_about">Acerca de</string>
    <string name="tAviso">Aplicación turística del municipio de Sopetrán</string>
    <string name="tAviso2">Desarrollada por: Santiago Londoño Jiménez</string>



    <string name="title_activity_splash">Turismo Sopetrán</string>
    <string name="title_activity_maps">Ubicación</string>



</resources>
