<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/finicio" android:title="@string/Inicio"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/fpresentacion" android:title="@string/Presentacion"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/fhotel" android:title="@string/Hotel"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/fbares" android:title="@string/Bares"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/fdemo" android:title="@string/Demo"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/fsitios" android:title="@string/Sitios"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/about" android:title="@string/title_activity_activity_about"
        android:orderInCategory="100" app:showAsAction="never" />


</menu>
